--- a/package.json
+++ b/package.json
@@ -1,4 +1,19 @@
 {
+  "name": "goit-nodejs-hw-01",
+  "version": "1.0.0",
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "start:dev": "nodemon index"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^11.0.0",
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
